# DineshkumarMuthusamy82

cmake/ti/: msp430.cmake
samples/: CMakeLists.txt  build.sh  lnk_msp430fr6047.cmd
samples/01_blink_c/: CMakeLists.txt
samples/evm430_uart_example/: CMakeLists.txt  msp430fr60x7_eusci_uart_standard_transceiver.c
